src/test/custom/invalid/import/circular1.hwacc

import circular2.hwacc

int f() is 
  return 1
end